refac: managed to add map, markers and onMarker functionality

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB_cm4XvzXaPXeMOQxzV6pLJvJ32COOH_M"></script>
+<!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD6e6nqP_9BdDKnOhcO3pBG6e4qXAELWz8"></script> -->
 
   <title>React App</title>
 </head>
